--- a/css/05_tableau.css
+++ b/css/05_tableau.css
@@ -1,3 +1,57 @@
 body {
     background-color: cornflowerblue;
 }
+/* feuille de style pour le premier tableau  */
+/* l'étoile ou astérisque sélectionne tous les éléments de ma page html */
+/* font-family nous permet de définir la typo utilisée sur la page : les typos se présentent dans l'ordre souhaité */
+* {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    background-color: lightskyblue;
+    /* largeur de la page 50% de la taille de l'écran du navigateur */
+    width: 50%;
+    /* margin: la marge extérieur de l'élément, avec une gestion automatique des marges, pour que le contenu soit centré dans la fenêtre */
+    margin: auto;
+}
+    
+
+    /* les styles pour les tableaux */
+table {
+        /* la bordure extérieur du tableau */
+        /* BORDER: 3 valeurs : epaisseur, type de filet, couleur   */
+        border: 3px solid purple;
+        /* par default la bordure contient 2 traits, pour que ke trait soit unique on utilise la propriété "collapse" */
+        border border-collapse: collapse;
+        /* la largeur du tableau par rapport a son contenu donc ici BODY // le tableau hérite des propriétés de son contenu sauf changement ici, la couleur de fond */
+        width:90%;
+        background-color: lightcyan; 
+    }
+
+caption {background-color: blue;
+    /* border: 3px solid #483D8B; */
+    padding: 10px;
+    /* border-collapse: collapse; */
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+th {
+        /* dotted = pointillé */
+        border: 2px dotted #6a5acd;
+        /* la marque intérieur de l'élément: padding */
+        padding:10px;
+        /* chaque élément fait 25% du parent */
+        width: 25%;
+    }
+
+td {
+        border: 1px dotted violet;
+        text-align: center;
+        padding: 5px;
+    }
+
+    /* td:fist :first-child le 1er td pour aligner à gauche le texte dans la première */
+td: :first-child {
+        text-align: :left;
+        background-color: #e6e6fa;
+    }
