--- a/css/cubitus_2.css
+++ b/css/cubitus_2.css
@@ -1,33 +1,44 @@
 body {
     background-color: grey;
 }
+
 .cub1, .cub2 {
-    background-color: brown;
-    width: 150%;
-    margin: 5px;
+    width: 10%;
+    margin: 10px;
     height: 150px;
     border:2px solid blue;
     border-radius: 20%;
-    float: right;
+    float: left;
     text-align: center;  
-    border-bottom-left-radius: 20em;
+    /* border-bottom-left-radius: 20em; */
     }
-
-    .clear {
-        clear: both;
-    }
-
+ 
 .cub1 {
-    background-color: rgb(57, 57, 97);
-    height: 100px;
+    background-color: green;
+    border-style: inset;
+}
+
+.cub2 {
+    background-color: cyan;
+}
+
+.cub3 {
+    border-radius: 50%;
+    background-color: red;
 }
 
 .clear {
     clear: both;
 }
 
-section {
-    background-color: rgb(57, 57, 97);
-    height: 100%;
-    float: left;
+.cub4 {
+
+}
+
+.cub5 {
+
+}
+
+.cub6 {
+
 }
